# grayscale1_gorbuzova

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  report.docx  report.tex  run_all_tests.sh
.github/workflows/: test.yml
experiments/: benchmark.c  benchmark_opencv.cpp  experiment_analysis.py
scripts/: build.sh  test.sh
src/: convolution.c  convolution.h  grayscale.c  main.c  stb_image.h  stb_image_write.h
tests/: opencv_reference.cpp  test.c
